Fixed alignment issues

--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -3,3 +3,6 @@
     height: 10px;
     background: #eee;
 }
+.ico {
+    padding: 0 3vw;
+}
